# genesiss

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  training.md
frontend/: .gitignore  electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json
frontend/src/main/: index.ts
frontend/src/preload/: index.ts
frontend/src/renderer/: App.tsx  index.html  main.tsx  styles.css
frontend/src/renderer/components/: CodeView.tsx  ModelPicker.tsx  ModelViewer.tsx  PromptInput.tsx
frontend/src/renderer/lib/: api.ts
genesiss/: __main__.py  cli.py  config.py  orchestrator.py  tui.py
genesiss/cad/: executor.py  validator.py
genesiss/llm/: extract.py  models.py  ollama.py  prompts.py
genesiss/server/: app.py  routes.py
genesiss/utils/: paths.py
training/: README.md  _build_notebooks.py
training/colab/: genesiss-20b.ipynb  genesiss-27b.ipynb  genesiss-4b.ipynb  genesiss-9b.ipynb
training/kaggle/: genesiss-20b.ipynb  genesiss-27b.ipynb  genesiss-4b.ipynb  genesiss-9b.ipynb
training/modelfiles/: genesiss-20b.Modelfile  genesiss-27b.Modelfile  genesiss-4b.Modelfile  genesiss-9b.Modelfile
training/shared/: checkpoint.py  data_loader.py  export.py  format.py
