[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "genesiss"
version = "0.1.0"
description = "Local text-to-CAD suite: finetuned LLMs serve CADQuery code through Ollama into an Electron viewer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Genesiss" }]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "textual>=0.83",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    "httpx>=0.27",
    "ollama>=0.4",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "tomli-w>=1.0",
    "platformdirs>=4.3",
    "cadquery>=2.5",
]

[project.scripts]
genesiss = "genesiss.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["genesiss"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
